--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2>Random Password Generator</h2>
       <div class="pass-container">
         <input value="" type="text" disabled />
-        <img src="./icon/" title="copy-password" >
+        <img src="" title="copy-password" >
       </div>
       
       <!-- password range  -->
