icon change in html, styling change of icon, replacement add with javascript

--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css" />
 
+    <!-- font awesome cdn link  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="container">
       <h2>Random Password Generator</h2>
       <div class="pass-container">
         <input value="" type="text" disabled />
-        <img src="" title="copy-password" >
+        <i class="fa-solid fa-copy"></i>
       </div>
-      
+
       <!-- password range  -->
       <div class="pass-range">
         <input type="range" min="6" max="16" value="8" />
